--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             <span style="transform: translate(-50%, -50%);">QUOIRKY.COM</span>
             </div>
             <div style="overflow: hidden;margin-top: 25px; margin-left: 70px;">
-              <iframe src="https://player.twitch.tv/?channel=quoirky&parent=quoirky.github.io" style="float: left; width: 75%; aspect-ratio: 16/9;"></iframe>
-              <iframe id="twitch-chat-embed" src="https://www.twitch.tv/embed/quoirky/chat?darkpopout&parent=quoirky.github.io" style="float: left; width: 350px; height: 774px;"></iframe>
+              <iframe src="https://player.twitch.tv/?channel=quoirky&parent=quoirky.com" style="float: left; width: 75%; aspect-ratio: 16/9;"></iframe>
+              <iframe id="twitch-chat-embed" src="https://www.twitch.tv/embed/quoirky/chat?darkpopout&parent=quoirky.com" style="float: left; width: 350px; height: 774px;"></iframe>
             </div>
             <button class="btn" onclick="toggleNightMode()" style="background-color: #0000FF; background-image: url('/world.gif');"></button>
   <script>
