--- a/index.html
+++ b/index.html
@@ -29,9 +29,28 @@
       btn.style.backgroundColor = currentMode === 'night-mode' ? 'black' : '#0000FF';
     }
   </script>
-</iframe>
+    <script>
+      const fetch = require('node-fetch');
+
+      const channelName = 'Quoirky';
+
+      async function checkStreamStatus() {
+    try {
+    const response = await fetch(`https://www.twitch.tv/${channelName}`);
+    const text = await response.text();
+
+    if (text.includes('"isLiveBroadcast":true')) {
+      console.log(`${channelName} is live`);
+    } else {
+      console.log(`${channelName} is not live`);
+    }
+  } catch (error) {
+    console.error('Error fetching Twitch page:', error);
+  }
+}
+checkStreamStatus();
+    </script>
               
-        </body>
-        
+        </body>  
     </head>
 </html>
