--- a/index.html
+++ b/index.html
@@ -1,26 +1,33 @@
 <!DOCTYPE html>
 <!-- State of The Bringing The Project To It's Original State (2000-2014) is Currently in BETA -->
 <html lang="en">
-<link href="style.css" rel="stylesheet"/>
+<link href="style.css" rel="stylesheet" />
 <link href="additional.css" rel="stylesheet">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <head>
-        <body>
-        <title>Quoirky: Early Access</title>
-            <div id="header">
-            <span style="transform: translate(-50%, -50%);">QUOIRKY.COM</span>
-            </div>
-            <div style="overflow: hidden;margin-top: 25px; margin-left: 70px;">
-              <iframe src="https://player.twitch.tv/?channel=quoirky&parent=quoirky.com" style="float: left; width: 75%; aspect-ratio: 16/9;"></iframe>
-              <iframe id="twitch-chat-embed" src="https://www.twitch.tv/embed/quoirky/chat?darkpopout&parent=quoirky.com" style="float: left; width: 350px; height: 774px;"></iframe>
-            </div>
-            <button class="btn" onclick="toggleNightMode()" style="background-color: black; background-image: url('/moon.gif');"></button>
 
-<script>
-  document.addEventListener('DOMContentLoaded', function() {
-    // Set dark mode by default
-    setNightMode(true);
+<head>
+
+<body>
+    <title>Quoirky: Early Access</title>
+    <div id="header">
+        <span style="transform: translate(-50%, -50%);">QUOIRKY.COM</span>
+    </div>
+    <div style="overflow: hidden;margin-top: 25px; margin-left: 70px;">
+        <iframe src="https://player.twitch.tv/?channel=quoirky&parent=quoirky.com"
+            style="float: left; width: 75%; aspect-ratio: 16/9;"></iframe>
+        <iframe id="twitch-chat-embed" src="https://www.twitch.tv/embed/quoirky/chat?darkpopout&parent=quoirky.com"
+            style="float: left; width: 350px; height: 774px;"></iframe>
+    </div>
+    <button class="btn" onclick="toggleNightMode()" style="background-color: black; background-image: url('/moon.gif');"></button>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+    // Check if user has a preference stored in local storage
+    var isNightMode = localStorage.getItem('nightMode') === 'true';
+
+    // Set the mode based on the stored preference or default to dark mode
+    setNightMode(isNightMode);
   });
 
   function toggleNightMode() {
@@ -30,6 +37,9 @@
     // Check if night mode is enabled after toggle
     var isNightMode = body.classList.contains('night-mode');
     
+    // Store the user's preference in local storage
+    localStorage.setItem('nightMode', isNightMode);
+
     // Set the new mode
     setNightMode(isNightMode);
   }
@@ -50,9 +60,9 @@
       btn.style.backgroundColor = '#0000FF';
     }
   }
-</script>
+    </script>
     <script>
-      const fetch = require('node-fetch');
+        const fetch = require('node-fetch');
 
       const channelName = 'Quoirky';
 
@@ -72,7 +82,7 @@
 }
 checkStreamStatus();
     </script>
-              
-        </body>  
-    </head>
+
+</body>
+</head>
 </html>
