--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="logo">QUOIRKY.COM</div>
     <nav class="right-nav">
       <a href="https://www.youtube.com/watch?v=OTePvoLKp60" class="nav-link" target="_blank">Contact</a>
-      <a href="https://www.youtube.com/watch?v=OTePvoLKp60" class="nav-link" target="_blank">FAQ</a>
+      <a href="https://www.youtube.com/watch?v=OTePvoLKp60" class="nav-link" >FAQ</a>
     </nav>
   </div>
 
