Added a warning for mobile phones

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="logo">QUOIRKY.COM</div>
     <nav class="right-nav">
       <a href="https://www.youtube.com/watch?v=OTePvoLKp60" class="nav-link" target="_blank">Contact</a>
-      <a href="https://www.youtube.com/watch?v=OTePvoLKp60" class="nav-link" >FAQ</a>
+      <a href="https://www.youtube.com/watch?v=OTePvoLKp60" class="nav-link" target="_blank">FAQ</a>
     </nav>
   </div>
 
@@ -28,13 +28,19 @@
     <iframe id="twitch-chat-embed" src="https://www.twitch.tv/embed/quoirky/chat?darkpopout&parent=quoirky.com"
       style="flex: 1; max-width: 350px;"></iframe>
   </div>
-  
-  
-
   <button class="btn" onclick="toggleNightMode()"
-    style="background-color: black; background-image: url('/images/4444/moon.gif');"></button>
+  style="background-color: black; background-image: url('/images/4444/moon.gif');"></button>
+  <div id="mobileWarning" class="hidden">
+    <div class="warning-message">
+      <p>This Website is NOT Recommended to be used on a mobile device.</p>
+      <button id="proceedButton" onclick="proceedToWebsite()" style="background-color: #0615e2;">Proceed to Website</button>
+    </div>
+  </div>
+
+  
   <script src="/javascript/darkmode.js"></script>
   <script src="/javascript/isLiveBroadcast.js"></script>
+  <script src="/javascript/mobileWarning.js"></script>
 </body>
 
 </html>
