Different approach to displaying a mobile warning

--- a/index.html
+++ b/index.html
@@ -30,11 +30,10 @@
   </div>
   <button class="btn" onclick="toggleNightMode()"
   style="background-color: black; background-image: url('/images/4444/moon.gif');"></button>
-  <div id="mobileWarning" class="hidden">
-    <div class="warning-message">
-      <p>This Website is NOT Recommended to be used on a mobile device.</p>
-      <button id="proceedButton" onclick="proceedToWebsite()" style="background-color: #0615e2;">Proceed to Website</button>
-    </div>
+  <div id="mobileWarning">
+    <p>This Website is NOT Recommended to be used on a mobile device.</p>
+    <button style="background-color: #0615e2;">Continue to Website</button>
+  </div>
   </div>
 
   
