--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
   <script src="/javascript/darkmode.js"></script>
   <script src="/javascript/isLiveBroadcast.js"></script>
   <script src="/javascript/mobileWarning.js"></script>
+  <script data-goatcounter="https://quoirky.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 </body>
 
 </html>
