--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div id="header">
     <nav class="left-nav">
-      <a href="https://www.youtube.com/watch?v=OTePvoLKp60" class="nav-link" target="_blank">Livestream</a>
+      <a href="https://www.youtube.com/watch?v=HG1CZEt8cA0" class="nav-link" target="_blank">Livestream</a>
       <a href="https://www.youtube.com/watch?v=EU2AIxkxiwg" class="nav-link" target="_blank">FAQ</a>
     </nav>
     <div class="logo">QUOIRKY.COM</div>
