--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
 <body>
   <div id="header">
     <nav class="left-nav">
-      <a href="https://www.youtube.com/watch?v=HG1CZEt8cA0" class="nav-link" target="_blank">Livestream</a>
-      <a href="https://www.youtube.com/watch?v=EU2AIxkxiwg" class="nav-link" target="_blank">FAQ</a>
+      <a href="https://www.youtube.com/watch?v=OTePvoLKp60" class="nav-link" target="_blank">Livestream</a>
+      <a href="https://www.youtube.com/watch?v=EU2AIxkxiwg" class="nav-link" target="_blank">Blog</a>
     </nav>
-    <div class="logo">QUOIRKY.COM</div>
+    <a href="https://quoirky.com">
+      <div class="logo">QUOIRKY.COM</div>
+    </a>
     <nav class="right-nav">
-      <a href="https://twitter.com/Quoirky" class="nav-link" target="_blank">Contact</a>
-      <a href="https://github.com/Quoirky/Newmaker" class="nav-link" target="_blank">Updates</a>
+      <a href="https://twitter.com/Quoirky" class="nav-link" target="_blank">Updates</a>
+      <a href="https://github.com/Quoirky/Newmaker" class="nav-link" target="_blank">Contact</a>
     </nav>
   </div>
 
