--- a/blog.html
+++ b/blog.html
@@ -37,7 +37,7 @@
     </div>
   </div>
   <script src="/javascript/darkmode.js"></script>
-  <script src="/javascript/isLiveBroadcast.js"></script>
+  <script src="/javascript/isLiveBroadcast.mjs"></script>
   <script src="/javascript/mobileWarning.js"></script>
 </body>
 
