--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <button class="btn" onclick="toggleNightMode()"
   style="background-color: black; background-image: url('/images/4444/moon.gif');"></button>
   <script src="/javascript/darkmode.js"></script>
-  <script src="/javascript/isLiveBroadcast.js"></script>
+  <script type="module" src="/javascript/isLiveBroadcast.mjs"></script>
   <script src="/javascript/mobileWarning.js"></script>
   <script data-goatcounter="https://quoirky.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 </body>
