--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
   <script type="module" src="/javascript/isLiveBroadcast.mjs"></script>
   <script src="/javascript/mobileWarning.js"></script>
   <script data-goatcounter="https://quoirky.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
+  <script type="module"> import nodeFetch from 'https://cdn.skypack.dev/node-fetch'; </script>
 </body>
 
 </html>
