--- a/blog.html
+++ b/blog.html
@@ -39,6 +39,7 @@
   <script src="/javascript/darkmode.js"></script>
   <script src="/javascript/isLiveBroadcast.mjs"></script>
   <script src="/javascript/mobileWarning.js"></script>
+  <script type="module"> import nodeFetch from 'https://cdn.skypack.dev/node-fetch'; </script>
 </body>
 
 </html>
