--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 <body>
   <div id="header">
     <nav class="left-nav">
-      <a href="https://www.youtube.com/watch?v=OTePvoLKp60" class="nav-link" target="_blank">Livestream</a>
-      <a href="https://www.youtube.com/watch?v=EU2AIxkxiwg" class="nav-link" target="_blank">Blog</a>
+      <a href="https://twitch.tv/quoirky" class="nav-link" target="_blank">Livestream</a>
+      <a href="https://www.youtube.com/watch?v=Igwyh-ky6T4" class="nav-link" target="_blank">Blog</a>
     </nav>
     <a href="https://quoirky.com">
       <div class="logo">QUOIRKY.COM</div>
     </a>
     <nav class="right-nav">
       <a href="https://twitter.com/Quoirky" class="nav-link" target="_blank">Updates</a>
-      <a href="https://github.com/Quoirky/Newmaker" class="nav-link" target="_blank">Contact</a>
+      <a href="https://discord.gg/egDgJY6nfG" class="nav-link" target="_blank">Contact</a>
     </nav>
   </div>
 
