--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </a>
     <nav class="right-nav">
       <a href="https://twitter.com/Quoirky" class="nav-link" target="_blank">Updates</a>
-      <a href="https://discord.gg/egDgJY6nfG" class="nav-link" target="_blank">Contact</a>
+      <a href="https://discord.gg/2NEbGmM79z" class="nav-link" target="_blank">Contact</a>
     </nav>
   </div>
 
