Updated help for Newmaker4

--- a/help.html
+++ b/help.html
@@ -17,7 +17,7 @@
 <ul>
 <li class="has-line-data" data-line-start="15" data-line-end="19"><code>$ban</code> - Ban user(s) with optional duration
 <ul>
-<li class="has-line-data" data-line-start="16" data-line-end="17">Usage: $ban [time] [username(s)] [#channels] [reason]</li>
+<li class="has-line-data" data-line-start="16" data-line-end="17">Usage: $ban [time] [username(s)/paste_link] [#channels] [reason]</li>
 <li class="has-line-data" data-line-start="17" data-line-end="18">Time format: [number][s/m/h/d/y] (e.g., 10s, 30m, 24h, 30d, 4y)</li>
 <li class="has-line-data" data-line-start="18" data-line-end="19">If no time is provided it will permaban the user.</li>
 </ul>
@@ -53,7 +53,7 @@
 <ul>
 <li class="has-line-data" data-line-start="32" data-line-end="36"><code>$ipban</code> - Ban user(s) from all channels
 <ul>
-<li class="has-line-data" data-line-start="33" data-line-end="34">Usage: $ipban [time] [username(s)] [reason]</li>
+<li class="has-line-data" data-line-start="33" data-line-end="34">Usage: $ipban [time] [username(s)/paste_link] [reason]</li>
 <li class="has-line-data" data-line-start="34" data-line-end="35">Time format: [number][s/m/h/d/y] (e.g., 10s, 30m, 24h, 30d, 4y)</li>
 <li class="has-line-data" data-line-start="35" data-line-end="36">If no time is provided it will permaban the user.</li>
 </ul>
