--- a/help.html
+++ b/help.html
@@ -11,6 +11,7 @@
 <li class="has-line-data" data-line-start="9" data-line-end="10"><code>$owner</code> / <code>$founder</code> - Display bot owner information</li>
 <li class="has-line-data" data-line-start="10" data-line-end="11"><code>$online</code> - Check active channels</li>
 <li class="has-line-data" data-line-start="11" data-line-end="12"><code>$fortune</code> - Get your daily fortune</li>
+<li class="has-line-data" data-line-start="11" data-line-end="12"><code>$coinflip</code> - Flips a coin</li>
 <li class="has-line-data" data-line-start="12" data-line-end="14"><code>$help</code> - Show command help information</li>
 </ul>
 <h3 class="code-line" data-line-start=14 data-line-end=15 ><a id="Moderation_Commands_Channel_Moderators_14"></a>Moderation Commands (Channel Moderators)</h3>
